--- a/package.json
+++ b/package.json
@@ -21,11 +21,17 @@
   "devDependencies": {
     "@babel/core": "^7.13.1",
     "@babel/node": "^7.13.0",
+    "@babel/preset-env": "^7.13.8",
     "nodemon": "^2.0.7"
   },
   "dependencies": {
     "ejs": "^3.1.6",
     "express": "^4.17.1",
     "mongoose": "^5.11.18"
+  },
+  "babel": {
+    "presets": [
+      "@babel/preset-env"
+    ]
   }
 }
