--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "type": "module",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "nodemon --exec babel-node ./Test/index.js",
     "start": "nodemon --exec babel-node index.js"
   },
   "repository": {
