--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "main": "index.js",
   "type": "module",
   "scripts": {
-    "test": "nodemon --exec babel-node ./test/test.js",
-    "start": "nodemon --exec babel-node index.js"
+    "test": "nodemon --exec babel-node index.js",
+    "start": "babel-node index.js"
   },
   "repository": {
     "type": "git",
